ux: Victory charts: Fix legends, add coloring for dark mode

--- a/packages/ui/styles/style.css
+++ b/packages/ui/styles/style.css
@@ -375,6 +375,9 @@ p {
 .dark #charts.victory g line {
   opacity: 0.4;
 }
+.dark #charts.victory .chartRow--line text tspan {
+  fill: var(--charts-text-color) !important;
+}
 /** Victory end **/
 
 /** Nivo start **/
